<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lasalle.first.part.quiz.activity.ResultActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/yourResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="16sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <TextView
                android:text="@string/totalNumberQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="0.28" />

            <TextView
                android:text="@string/totalQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalQuestions"
                android:layout_weight="1"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/totalCorrectQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="0.29" />

            <TextView
                android:text="@string/totalCorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalCorrect"
                android:layout_weight="1.06"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/totalIncorrectQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="0.38" />

            <TextView
                android:text="@string/totalIncorrect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalIncorrect"
                android:layout_weight="1.36"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <Button
            android:text="@string/startQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StartQuiz"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>
